Update TierTaggerClient.java